syntax = "proto3";

option csharp_namespace = "Proto.Requests.UseCase";

import "DTO/ticket.proto";
import "DTO/time_slot.proto";
import "DTO/statistics_data.proto";

message TimeSlotControlDataProto {
  TicketProto ticket_proto = 1;
  TimeSlotProto time_slot_proto = 2;
  StatisticsDataProto statistics_data_proto = 3;
}